Update Plist for Location Access, Add LocationManager to request data
Add updated project file

--- a/AllTrailsLunch/Info.plist
+++ b/AllTrailsLunch/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSLocationUsageDescription</key>
 	<string>This app needs your location to show you nearby restaurants.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs your location to show you nearby restaurants.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>This app needs your location to show you nearby restaurants.</string>
 	<key>UIApplicationSceneManifest</key>
